# task_aiplanet

./: .gitignore  README.md
backend/: .gitignore  chatbot.py  main.py  models.py  pyproject.toml  rag.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/components/: Chat.jsx
