[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.6",
    "langchain-google-genai>=2.0.7",
    "langchain>=0.3.13",
    "streamlit>=1.41.1",
    "langchain-community>=0.3.13",
    "pypdf>=5.1.0",
    "langchain-chroma>=0.1.4",
    "langchainhub>=0.1.21",
    "rapidocr-onnxruntime>=1.4.3",
    "langchain-experimental>=0.3.4",
    "faiss-cpu>=1.9.0.post1",
    "aiosqlite>=0.20.0",
]

[tool.setuptools]
py-modules = []